@@ -31,5 +31,8 @@ same with mrcal.rectified_system(), rectification_maps
 estimate_monocular_calobject_poses_Rt_tocam() ignores invalid input points
 This makes calibrating given incomplete chessboard observations work properly
 
+show_projection_diff() can plot vectorfields with multiple distances
+And the mrcal-show-projections-diff tool. Same as with heat maps, we plot the
+diff for the first distance
 
 * Migration notes 2.2 -> 2.3
